# audiocloud_desktop

./: .gitignore  Cargo.toml  README.md  index.html  run.bat  settings.json
src/: audio.rs  bootstrap.rs  editor.rs  error.rs  helpers.rs  main.rs  overlay_anchor.rs  request.rs  search.rs  settings.rs  status.rs  themes.rs  views.rs  waveform.rs  widgets.rs
