[package]
name = "audiocloud_desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#iced = "0.12.1"
iced = { git = "https://github.com/iced-rs/iced/", branch = "master", features = ["tokio"] }
serde = "1.0.198"
serde_json = "1.0.116"
serde_yaml = "0.9.34"
audiocloud_lib = { version = "0.1.2", git= "https://github.com/AppearedOne/audiocloud_lib.git"}
iced_aw = { version = "0.8.0", features = ["icons", "selection_list"] }
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.82"
reqwest = { version = "0.12.4", features = ["json"] }
rodio = "0.18.0"
