[package]
name = "audiocloud_desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#iced = "0.12.1"
iced = { git = "https://github.com/iced-rs/iced/", branch = "master", features = ["tokio", "advanced"] }
serde = "1.0.203"
serde_json = "1.0.117"
serde_yaml = "0.9.34"
audiocloud_lib = { version = "0.1.2", git= "https://github.com/AppearedOne/audiocloud_lib.git"}
tokio = { version = "1.38.0", features = ["rt", "sync", "macros", "io-util", "time"] }
anyhow = "1.0.86"
reqwest = { version = "0.12.4", features = ["json"] }
rodio = "0.18.1"
serde_derive = "1.0.203"
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
# drag = { path = "../drag-rs/crates/drag" }
rand = "0.8.5"
getrandom = {version = "0.2.15", features = ["js"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clipboard-rs = "0.1.7"
